Update ParticipantService.java